--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,9 @@
+여러가지 방법이 있겠지만 가장 첫 번째로 떠오르는 방법은
+db 자체에 거는 lock을 고려해볼 것 같습니다. 
+트랜잭션을 통해 하나의 트랜잭션이 해당 테이블을 점유하고 있는 경우, 다른 트랜잭션이 해당 트랜잭션의 작업이 끝나기 전까지 대기하는 방법이 있을텐데
+해당 방법은 deadlock이 발생할 가능성이 있고, 교착상태에 빠질 수 있습니다. 그렇기 때문에 트랜잭션의 범위를 최소한으로 잡고, timeout을 설정하는 방법들이 있습니다.
+하지만 해당 테이블이 자주 사용되는 테이블이라면 서비스 도중 해당 테이블을 바라보는 서비스들에서 장애를 일으킬 가능성이 큽니다.
 
+두번째 방법은 어플리케이션 단에서 lock을 거는 방법입니다. 
+낙관적 잠금을 통해서 동시성 이슈를 해결할 수 있지만, 써드파티에서 수정되는 경우는 해결하기 어렵기 때문에
+성능의 이점을 조금 포기하더라도 비관적 잠금을 사용할 수 밖에 없습니다.
