--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,12 @@
+## [TCP와 UDP의 차이점]
+TCP는 한번 연결을 맺고 통신이 종료될 때 까지 연결을 유지합니다.
+그렇기 때문에 안정적이고, 데이터를 넘기는 순서에 따라 순차적으로 데이터가 도착하게 됩니다.
+안정성이 높기 때문에 데이터가 정확하게 목표까지 잘 도착하게 됩니다.
+대표적으로 Http나 FTP처럼 정확하게 데이터를 전달할 때 주로 사용됩니다.
+추가적으로 ACK(응답) 및 재전송 메커니즘을 사용하여 데이터의 손실이나 오류가 발생할 경우 복구할 수 있습니다. 
 
+UDP는 연결을 데이터를 보낼때마다 맺고 끊습니다.
+그렇기 때문에 TCP에 비해서 비교적 불안정적이고, 데이터를 넘기는 순서 또한 보장할 수 없습니다.
+하지만 속도가 TCP에 비해 빠른게 장점입니다.
+대표적으로 영상 스트리밍이나 채팅에서 주로 사용됩니다.
+데이터 손실이 발생할 경우 복구되지 않는 등의 단점이 있지만, 실시간성이 요구되는 경우에는 TCP보다 유용할 수 있습니다.
