--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,12 @@
+## 웹 브라우저에 네이버 를 검색하고 화면에 네이버 화면이 출력이 될 때 까지 내부적으로 어떤 동작들이 수행이 되는지 설명해주세요.
+
+1.사용자가 브라우저 주소창에 WWW.NAVER.COM을 입력한다.
+2.웹 브라우저는 캐싱된 DNS 기록들을 통해 해당하는 도메인 주소와 대응하는 IP 주소를 확인한다.
+3.만약 캐싱된 DNS 기록이 없으면 웹 브라우저는 HTTP를 통해 DNS에게 해당 도메인에 해당하는 IP주소를 요청한다.
+4.DNS가 웹 브라우저에게 받는 IP주소를 응답한다.
+  - DNS 쿼리를 통해 해당하는 IP를 찾기위해 반복적으로 검색(Recursive Search)한다.
+5.웹 브라우저가 웹 서버에 데이터를 요청한다.
+6.웹 서버가 End Point에 해당하는 데이터를 응답한다.
+7.http를 통해 다시 사용자에게 데이터를 전달한다.
+8.웹 브라우저는 응답받은 데이터를 화면에 출력한다.
 
