--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,15 @@
+## 본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.
 
+### JAVA의 가비지 컬렉션(Garbage Collection)이 발생하는 동안 오버헤드가 발생한다.
+#### 가비지 컬렉션(Garbage Collection)이란 무엇인가?
+프로그램을 개발하다 보면 사용하지 않는 메모리(Garbage)가 발생이 발생하게 되는데 해당 메모리의 할당을 해제하는 것을 말합니다. 가비지 컬렉션은 자바의 메모리 관리 방법 중 하나로 JVM(Java Virtual Machine)의 Heap 영역에서 동적으로 할당했던 메모리 영역 중 사용하지 않게 된 영역을 삭제하는 프로세스를 의미합니다. 가비지 컬렉터가 메모리 관리를 자동으로 해주기 때문에 개발자는 메모리 관리, 메모리 누수에 대해 신경 쓸 필요가 없어집니다.
+
+#### 가비지 컬렉션(Garbage Collection)의 동작방식?
+객체들은 실질적으로 JVM의 Heap 영역안에서 생성이 되고, Stack 영역이나 Method 영역에서는 해당 Heap 영역에 생성된 객체들의 메모리 주소만 참조하는 형태로 생성이 되기 때문에 Heap 영역을 효율적으로 관리하기 위해서 보통 Stop The Wolrd, Mark And Sweep의 단계를 따르게 됩니다.
+
+1. Stop The World
+Stop The World는 효율적으로 가비지 컬렉션(Garbage Collection)을 하기 위해서 모든 쓰레드가 중지되고, 가비지 컬렉션을 진행하는 쓰레드만 작업을 진행하고, 가비지 컬렉션(Garbage Collection)이 완료되면 다시 활동을 재개하는 것을 말합니다.
+2. Mark And Sweep
+Mark And Sweep에서 Mark는 Stop The World의 상태에서 Jvm의 Heap 메모리 안에서 참조(사용)되고 있는 메모리를 마크하는 작업을 뜻하고, Sweep은 Mark된 메모리의 할당을 해제하는 작업을 뜻합니다.
+
+#### 즉 JAVA 언어에서의 결함은, 가비지 컬렉션(Garbage Collection)이 동작하는 동안 Stop The World 단계를 거치게 될때 오버헤드가 발생하게 된다는 점 입니다. 그렇기 때문에 너무 자주 가비지 컬렉션(Garbage Collection)이 실행된다면 어플리케이션의 성능에 악영향을 끼치게 됩니다.
