--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,6 @@
+## 본인이 주력으로 사용하는 언어에서 자료구조와 관련 된 클래스가 내부적으로 어떻게 동작하는지 한 가지 사례를 정하여 작성해주세요. ex) ArrayList, HashMap 등등
 
+### ArrayList
+- ArrayList는 인덱스를 통해 원소를 추가하고, 인덱스를 통해 원소를 탐색하기 때문에 조회하는 속도가 빠르지만, 만약 첫번째에 원소를 추가하거나 삭제하게 되면 내부의 다른 원소들이 밀리거나 줄어들기 때문에 이런 경우에는 성능이 좋지 않습니다.
+
+- ArrayList를 기본 생성자를 통해 생성하게 되면 내부적으로 10의 기본값을 주게 되는데, 만약 ArrayList에서 지정한 크기를 넘어가게 되면 grow()라는 함수를 실행하게 됩니다. 해당 함수를 실행하면 현재 사이즈 +1을 파라미터로 넘겨받게 되고, 기존 사이즈+1과 기존 용량의 우측 쉬프트 연산 중 큰 값을 비교해 가장 큰 값에 기존용량을 더해 기존 크기에서 1.5배를 늘려 새로운 ArrayList를 반환합니다. 만약 ArrayList의 크기가 0보다 작다면 OOM Exception을 발생시키고 ArrayList의 최대값보다 작은 경우에는 ArrayList의 최대값을 반환하게 됩니다.
